fix(header): width & padding in version mobile

--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,3 +1,5 @@
 .contact-container {
     background-color: aqua;
+    height: 800px;
+    width: 1000px;
 }
