--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -8,15 +8,17 @@
     align-items: center;
     height: 10vh;
     width: 80vw;
-    padding: 5px 10px 5px 10px;
+    padding: 5px 10px;
     background-color: white;
     z-index: 999;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 650px) {
     .header-container {
-        width: 100vw;
-        left: 0;
-        transform: none;
+        width: 100%;
+        left: 50%;
+        transform: translateX(-50%);
+        font-size: 1.5rem;
+        padding: 0 100px;
     }
 }
