--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,4 +1,6 @@
 .home-container {
     margin-top: 10vh;
     background-color: aqua;
+    height: 800px;
+    width: 1000px;
 }
