--- a/src/components/proyects/proyects.css
+++ b/src/components/proyects/proyects.css
@@ -1,3 +1,5 @@
 .proyects-container {
     background-color: antiquewhite;
+    height: 800px;
+    width: 1000px;
 }
